# upl_finder_fast

./: .gitignore  README.md  environment.yml  parameter.toml  pyproject.toml  requirements.txt  roche_upl_sequences.pkl  roche_upl_sequences.tsv
tests/: test_upl.py  test_workflow_helpers.py
upl_finder_fast/: README.md  UPL_Finder.txt  __init__.py  blastdb.py  cli.py  design.py  ensembl.py  miqe.py  report.py  specificity.py  upl.py  workflow.py
upl_finder_fast/upl_finder_fast.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
upl_finder_rust/: Cargo.toml  README.md  environment.yml  pyproject.toml
upl_finder_rust/src/: lib.rs  main.rs
