[package]
name = "upl_finder_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "upl_finder_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
aho-corasick = "1.1"
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
